# csound-externals

./: CMakeLists.txt  Makefile  README.md
source/projects/csound6~/: CMakeLists.old.txt  CMakeLists.txt
source/projects/csound_tilde/: CMakeLists.old.cmake  CMakeLists.txt  CMakeLists.working.cmake  DEVNOTES.md
source/projects/csound_tilde/src/: CsoundObject.cpp  csound~.cpp  definitions.h  memory.cpp  memory.h  midi.cpp  midi.h  sequencer.cpp  sequencer.h  util.cpp  util.h
source/scripts/: fix_bundle.sh  macos_release.cmake
